<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorMainBG">

        <!-- Welcome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_margin="50dp"
            android:layout_gravity="center"/>
        <!-- Get started -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:layout_margin="30dp"
            android:text="@string/to_begin"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"/>
        <!-- Get started button -->
        <Button
            android:id="@+id/menu_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:background="@drawable/menu_button"
            android:text="@string/get_started"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>